<resources>
    <string name="app_name">Quản lý tiệm may </string>
    <string name="search_title">Tìm kiếm....</string>
    <string name="search_hint">Nhập tên KH</string>
    <string name="hoten">Họ tên</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="sodo">Số đo</string>
    <string name="createNewCustomer">Tạo mới</string>
    <string name="add_new_customer_screen_title">Thêm mới khách hàng</string>
    <string name="details">Thông tin chi tiết</string>
    <string name="latest">Khách sắp lấy</string>
    <string name="title_activity_customer_detail_screen">Thông tin chi tiết khách hàng</string>
    <string name="tab_text_1">Thông tin chi tiết</string>
    <string name="tab_text_2">Lịch sử đặt đồ</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="call">Gọi</string>
    <string name="message">Nhắn tin</string>
    <string name="updateCustomer">Cập nhật thông tin</string>
    <string name="add_new_schedule_title">Thêm mới lịch hẹn</string>
    <string name="update_customer_screen_title">Cập nhật thông tin khách hàng</string>
    <string name="update_schedule_title">Cập nhật lịch hẹn</string>
</resources>
