<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hoangduy.sewingapp.CustomerAddScreen">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/add_screen_inset"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin_10">

        <EditText
            android:id="@+id/edt_customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hoten"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edt_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_customerName"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/sodienthoai"
            android:inputType="numberDecimal"
            android:text="0"
            android:textAlignment="center" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/detail_section"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_screen_details_height"
            android:layout_below="@id/edt_phoneNumber">

            <EditText
                android:id="@+id/edt_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:hint="@string/sodo"
                android:inputType="textMultiLine"
                android:maxLines="512"
                android:paddingLeft="@dimen/margin_10" />
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_section"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/createNewCustomer" />

    </RelativeLayout>
</ScrollView>
